# monorepo

./: CHANGELOG.md  Cargo.toml  README.md
crates/monorepo/: Cargo.toml
crates/typescript_tools/: Cargo.toml
crates/typescript_tools/src/: configuration_file.rs  lib.rs  link.rs  make_depend.rs  monorepo_manifest.rs  package_manifest.rs  pin.rs  query.rs  typescript_config.rs  unpinned_dependencies.rs
crates/typescript_tools/src/types/: directory.rs  mod.rs  package_name.rs
crates/typescript_tools/templates/: makefile
nix/: default.nix  flake.nix
